# oskernel2023-bitethedisk

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
crates/: README.md
docs/: 1-概述.md  15-文件系统优化历程.md  16-信号系统与信号处理.md  2-整体架构.md  20-多核管理.md  3-任务控制块.md  4-任务创建.md  5-任务调度(可能要讲多核, 后面多核管理讲如何实现).md  7-异常与中断.md  ExtractSyscallNames.nim  bite_the_disk.md  commit-spec.md  debug.md  oscomp_syscalls.md  page_cache.md  文件系统优化历程.md
kernel/: Cargo.toml  Makefile  build.rs
kernel/.cargo/: config.toml
kernel/linkerld/: linker.ld
kernel/src/: console.rs  consts.rs  entry.S  error.rs  logging.rs  main.rs  panic.rs  sbi.rs  timer.rs
kernel/src/board/: fu740.rs  mod.rs  qemu.rs
kernel/src/boards/: qemu.rs  u740.rs
kernel/src/cell/: mod.rs  sync_cell.rs
kernel/src/drivers/: mod.rs
kernel/src/drivers/block/: mod.rs  virtio_blk.rs  virtio_impl.rs
kernel/src/drivers/block/virtioblk/: mod.rs  virtio_blk.rs
kernel/src/drivers/fu740/: mod.rs  plic.rs  sdcard.rs
kernel/src/drivers/qemu/: mod.rs  virtio_blk.rs  virtio_gpu.rs  virtio_impl.rs
kernel/src/fs/: default_files.rs  dirent.rs  fdset.rs  file.rs  inode.rs  mod.rs  mount.rs  open_flags.rs  page.rs  page_cache.rs  path.rs  pipe.rs  stat.rs
kernel/src/fs/fat32/: file.rs
kernel/src/fs/stdio/: mod.rs  stdin.rs  stdout.rs
kernel/src/macros/: hsm.rs  mod.rs  on_boot.rs  profile.rs
kernel/src/mm/: address.rs  flags.rs  frame_allocator.rs  kernel_heap_allocator.rs  kernel_vmm.rs  kvmm.rs  memory_set.rs  mmap.rs  mod.rs  page.rs  page_table.rs  permission.rs  shared_memory.rs  user_buffer.rs  vm_area.rs  vma.rs
kernel/src/mm/memory_set/: chunk_area.rs  flags.rs  map_area.rs  map_flags.rs  memory_set.rs  mod.rs  vm_area.rs
kernel/src/syscall/: dispatcher.rs  errno.rs  error.rs  futex.rs  mod.rs  syscall_id.rs
kernel/src/syscall/impls/: fs.rs  futex.rs  mm.rs  mod.rs  others.rs  process.rs
kernel/src/task/: aux_entry.rs  context.rs  id.rs  info.rs  initproc.rs  kernel_stack.rs  kstack.rs  manager.rs  mod.rs  pid.rs  signal.rs  task.rs
kernel/src/task/initproc/: busybox  initproc.S  mod.rs  test_all_custom.sh
kernel/src/task/manager/: hanging_task.rs  mod.rs  task_manager.rs
kernel/src/task/processor/: cpu.rs  mod.rs  processor.rs  schedule.rs
kernel/src/task/signals/: mod.rs  siginfo.rs  signal_flags.rs
kernel/src/task/switch/: mod.rs  switch.S
kernel/src/trap/: context.rs  handler.rs  mod.rs  trampoline.S
os/: Cargo.toml  Makefile  build.rs
os/.cargo/: config.toml
os/src/: buildin_app.S  config.rs  console.rs  consts.rs  entry.S  initproc.S  linker-qemu.ld  linker.ld  main.rs  sbi.rs  timer.rs
os/src/boards/: qemu.rs
os/src/drivers/: mod.rs
os/src/drivers/block/: mod.rs  sdcard.rs  virtio_blk.rs
os/src/fs/: inode.rs  mod.rs  mount.rs  open_flags.rs  pipe.rs  stat.rs  stdio.rs
os/src/fs/stdio/: stdin.rs
os/src/macros/: console.rs  hsm.rs  kernel_segment.rs  mm.rs  mod.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  kernel_vmm.rs  memory_set.rs  mod.rs  page_table.rs  user_buffer.rs  vma.rs
os/src/mm/memory_set/: map_area.rs  memory_set.rs  mod.rs
os/src/sbi/: base.rs  hsm.rs  legacy.rs  mod.rs
os/src/sync/: mod.rs  mutex.rs  up.rs
os/src/syscall/: dispatcher.rs  errno.rs  fs.rs  ids.rs  mod.rs  process.rs  sigset.rs  sync.rs  syscall_id.rs  thread.rs
os/src/syscall/impls/: fs.rs  others.rs  process.rs
os/src/task/: aux.rs  context.rs  global_task_manager.rs  id.rs  info.rs  initproc.rs  kernel_stack.rs  manager.rs  mod.rs  pid.rs  process.rs  processor.rs  sched.rs  signal.rs  switch.S  switch.rs  task.rs
os/src/task/processor/: mod.rs  processor.rs
os/src/task/signals/: mod.rs  signal_flags.rs  signals.rs  sigset.rs
os/src/task/switch/: mod.rs
os/src/trap/: context.rs  handler.rs  mod.rs  trampoline.S  trap.S
(+159 files in other folders)
