[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[features]
multi_harts = []

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.9.0"
bitflags = "2.0.0"
xmas-elf = "0.9.0"
spin = "0.9.6"
riscv = "0.10.1"
virtio-drivers = "0.4.0"
linked_list_allocator = "0.10.5"
log = "0.4"
paste = "1"

fat32 = { path = "../fat32" }

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"