[package]
name = "os"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = { git = "https://github.com/rust-lang-nursery/lazy-static.rs", version = "1.5.0", features = [
    "spin_no_std",
] }
buddy_system_allocator = "0.9.0"
bitflags = "2.0.0"
xmas-elf = "0.9.0"
spin = "0.9.6"
riscv = "0.10.1"

fat32 = { path = "../fat32" }
virtio-drivers = { path = "../vendor/virtio-drivers" }
# Deprecated: 留着是为了防止报错
k210-pac = { git = "https://github.com/wyfcyx/k210-pac" }
k210-hal = { git = "https://github.com/wyfcyx/k210-hal" }
k210-soc = { git = "https://github.com/wyfcyx/k210-soc" }

[features]
board_qemu = []
board_k210 = []
